client/src/pages/room/components/users/usercard/UserCard.module.css
.userCard {
  position: relative;
  gap: 12px;
  padding: 16px 24px;
  width: var(--user-card-width);
  height: var(--user-card-height);
  display: flex;
  justify-content: center;
}

.userCardContent {
  display: flex;
  flex-direction: column;
  gap: 12px;
  align-items: center;
}

.displayName {
  font-size: 16px;
}

.audioWavesContainer {
  height: 1.5rem;
}

.micStatus {
  font-size: 9px;
  display: flex;
  align-items: center;
  gap: 4px;
  white-space: nowrap;
}

